--- a/style.css
+++ b/style.css
@@ -1,91 +1,64 @@
-/* Box sizing rules */
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
-
-/* Prevent font size inflation */
-html {
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
 }
-
-/* Remove default margin in favour of better control in authored CSS */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin-block-end: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"] {
-  list-style: none;
-}
-
-/* Set core body defaults */
+/*
+  Typographic tweaks!
+  3. Add accessible line-height
+  4. Improve text rendering
+*/
 body {
-  min-height: 100vh;
   line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
 }
-
-/* Set shorter line heights on headings and interactive elements */
-h1,
-h2,
-h3,
-h4,
-button,
-input,
-label {
-  line-height: 1.1;
-}
-
-/* Balance text wrapping on headings */
-h1,
-h2,
-h3,
-h4 {
-  text-wrap: balance;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-  color: currentColor;
-}
-
-/* Make images easier to work with */
+/*
+  5. Improve media defaults
+*/
 img,
-picture {
-  max-width: 100%;
+picture,
+video,
+canvas,
+svg {
   display: block;
+  max-width: 100%;
 }
-
-/* Inherit fonts for inputs and buttons */
+/*
+  6. Remove built-in form typography styles
+*/
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
-
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-  min-height: 10em;
+/*
+  7. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
-
-/* Anything that has been anchored to should have extra scroll margin */
-:target {
-  scroll-margin-block: 5ex;
+/*
+  8. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
 }
 
 .hidden {
@@ -113,11 +86,43 @@ textarea:not([rows]) {
   font-style: normal;
 }
 
+:root {
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-200: hsl(275, 100%, 97%);
+  --clr-neutral-300: hsl(292, 16%, 49%);
+  --clr-neutral-400: hsl(292, 42%, 14%);
+
+  --ff-base: "Work Sans", sans-serif;
+  --fw-bold: 700;
+  --fw-semibold: 600;
+  --fw-regular: 400;
+}
+
+main {
+  min-height: 100vh;
+  min-height: 100dvh;
+  display: grid;
+  justify-content: center;
+  padding-top: 5rem;
+
+  background-image: url(assets/images/background-pattern-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: var(--clr-neutral-200);
+}
+
 .faq {
-  font-family: "Work Sans", sans-serif;
+  font-family: var(--ff-base);
+  background-color: var(--clr-neutral-100);
+  height: min-content;
+  padding: 1rem;
+  padding-bottom: 0;
+  margin: 1rem;
+  border-radius: 0.5625rem;
 }
 
 .faq__title {
+  margin-top: 0;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -126,10 +131,49 @@ textarea:not([rows]) {
 }
 
 .faq__title::before {
+  --height: calc(2.5rem / 1.5);
+  --width: calc(2.5625rem / 1.5);
   content: "";
   display: inline;
   background-image: url(assets/images/icon-star.svg);
-  width: 2.5rem;
-  height: 2.5625rem;
-  background-size: 2.5rem 2.5625rem;
+  width: var(--width);
+  height: var(--height);
+  background-size: var(--width) var(--height);
+}
+
+.faq__question {
+  font-size: 1.0625rem;
+  padding: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  text-align: left;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+
+  font-weight: var(--fw-semibold);
+  cursor: pointer;
+}
+
+.faq__section {
+  color: var(--clr-neutral-300);
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.faq__border {
+  width: 100%;
+  border-bottom: 1px var(--clr-neutral-200) solid;
+}
+
+@media (min-width: 40rem) {
+  main {
+    background-image: url(assets/images/background-pattern-desktop.svg);
+  }
+
+  .faq {
+    width: 100%;
+    max-width: 39rem;
+  }
 }
