--- a/style.css
+++ b/style.css
@@ -92,6 +92,8 @@ h6 {
   --clr-neutral-300: hsl(292, 16%, 49%);
   --clr-neutral-400: hsl(292, 42%, 14%);
 
+  --clr-accent-pink: hsl(277, 49%, 49%);
+
   --ff-base: "Work Sans", sans-serif;
   --fw-bold: 700;
   --fw-semibold: 600;
@@ -142,6 +144,7 @@ main {
 }
 
 .faq__question {
+  color: var(--clr-neutral-400);
   font-size: 1.0625rem;
   padding: 1rem 0;
   display: flex;
@@ -154,6 +157,10 @@ main {
 
   font-weight: var(--fw-semibold);
   cursor: pointer;
+}
+
+.faq__question:is(:focus, :hover) {
+  color: var(--clr-accent-pink);
 }
 
 .faq__section {
